# deco

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh  cpr.cpp  param_norne.json  param_sleipner.json  param_spe11c.json  run.sh
IO/: ascii2bin.cpp  cpp_read.hpp  ptree.hpp
adapter/: array_adapter.cpp  csr2coo.cpp
core/: CSR.hpp  MxM.cpp  alg.hpp  header.h  pch.h  profiler.hpp  sorting.hpp
precond/: CPR.hpp
precond/FSAI/: FSAI.hpp  FSAI.tpp  LU_main.cpp  core.tpp  diagonal.cpp  gather.cpp  numeric.tpp  symbolic.tpp
precond/Jacobi/: Jacobi.hpp  Jacobi.tpp
precond/hypre_AMG/: hypre_AMG.hpp  hypre_AMG.tpp
solver/: SOL.hpp  bicgstab.tpp  lbicgstab.tpp  lgmres.tpp  pcg.tpp  rgmres.tpp
